Fixed overflow in Challenge arena

--- a/src/features/Challenge/Challenge.module.css
+++ b/src/features/Challenge/Challenge.module.css
@@ -114,10 +114,11 @@ align-content: (stretch is the default)
 
 .rounded-outline {
   box-shadow: 4px 4px 4px #353b5e;
-  border-radius: 25px;
+  border-radius: 6px;
   border: 2px solid #2c63b6;
-  padding: 10px;
-  margin: 10px;
+  overflow: hidden;
+  /*padding: 10px;
+  margin: 10px;*/
   /*
   color: white;
   height: 150px;
